--- a/FestivalPortalR2_Participant/src/Login_en_US.properties
+++ b/FestivalPortalR2_Participant/src/Login_en_US.properties
@@ -1,3 +1,20 @@
 login=Login
 heading1=Festival Event Registration System
 heading2=Portal Login Page
+name=Visitor Name
+password=Password
+register_now=Register Here
+new_visitor=New Visitor
+hindi=\u0939\u093F\u0902\u0926\u0940
+first_name=First Name
+last_name=Last Name
+username=Username
+confirm_password=Confirm Password
+email=Email
+phone_number=Phone Number
+address=Address
+mandatory=Fields marked (*) are Mandatory
+new_user_page=New Visitor Registration Page
+register=Register
+clear=Clear
+login_page=Login Page 
